--- a/Practice/nginx-yes-tls/templates/index.html.j2
+++ b/Practice/nginx-yes-tls/templates/index.html.j2
@@ -6,5 +6,7 @@
   <h1>nginx, configured by Ansible</h1>
   <p>If you can see this, Ansible successfully installed nginx.</p>
   <p>Running on {{ inventory_hostname }}</p>
+  <hr>
+  <em>nginx/</em>
   </body>
 </html>
